--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -1,11 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <link rel="stylesheet" href="/app.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/app.css">
+    <block name="head"></block>
 </head>
-
 <body>
-  <block name="main"></block>
-  <script src="/app.js"></script>
+    <block name="main"></block>
+    <script src="/app.js"></script>
 </body>
-
 </html>
